# EA-VT-2W

./: .gitignore  CMakeLists.txt  DSP_DESIGN.md  NOTARIZATION_GUIDE.md  README.md  SETUP.md  VT-2W White.jucer  build.bat  build.sh  index.html  publish_to_github.sh  script.js  style.css
.github/workflows/: build-windows.yml
packaging/: create_pkg.sh  installer.iss
src/: PluginEditor.cpp  PluginEditor.cpp.bak  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
